# redouble

./: .babelrc  .editorconfig  .eslintrc  .gitignore  .travis.yml  LICENSE  README.md  bsconfig.json  component.json  component.json.mvd  config.js  gulpfile.js  index-dev.html  index.html  karma.conf.js  package-lock.json  package.json  preprocessor.js  test.jsx  try.ml  tsconfig.json
api/: tower.d.ts
config/: aws-deploy.js  environment-shim.js  index-template.ejs  index-template.html  jest.config.js  karma-config-builder.js  karma.ci.conf.js  karma.conf.js  karma.coverage.conf.js  make-webpack-config.js  mocha-environment.js  phantomjs-shim.js  tmpl.html  webpack-config-builder.js  webpack.config.js  webpack.production.js
lib/: angular2.dev.js  es6-module-loader.src.js  system.src.js
origsrc/server/: api.js  isomorph.js
origsrc/services/: server.js
origsrc/stores/: game-actions.js  game-reducer.js  notification-actions.js  notification-reducer.js  player-actions.js  player-reducer.js
origsrc/ui/: app.jsx  routes.jsx  server.jsx
ppx_redux/: jbuild  ppx_redux.ml  ppx_redux.opam  sample.ml
src/: _references.d.ts  app.js  client.re  index-specs.ts  index.html  index.ts  main.js  program.re
src/__tests__/: api-tests.js
src/actions/: gameActions.re
src/declarations/: commonjs.d.ts
src/dux/: combineReducers.re  reducer.re  store.re
src/effects/: GameEffects.re
src/example/: index.re
src/model/: bid.re  card.re  index.ts  model.d.ts  seat.re  tower-service.ts
src/server/: api.js  (+2 more)
tasks/: index.js
test/: async-test.js  out.js  yield-test.ts
(+469 files in other folders)
