opam-version: "1.2"
name: "ppx_redux"
maintainer: "Frank Wallis"
authors: [ "Frank Wallis" ]
license: "MIT"
homepage: "https://github.com/frankwallis/ppx_redux"
bug-reports: "https://github.com/frankwallis/ppx_redux/issues"
dev-repo: "git://github.com/frankwallis/ppx_redux.git"
tags: [ "redux", "combine" ]
build: [[make "all"]]
install: [[make "install"]]
remove: [["ocamlfind" "remove" "ppx_redux"]]
depends: [
  "ocamlfind" {>= "1.5.0"},
  "ppx_tools" {>= "5.0.0"}
]
available: ocaml-version >= "4.05.0"
